AASES-Project/force-app/main/default/objects/MarkingScheme__c/MarkingScheme__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>CourseCode__c</fullName>
        <label>Course Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot__c</fullName>
        <label>Slot</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExamType__c</fullName>
        <label>Exam Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria1__c</fullName>
        <label>Criteria 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria2__c</fullName>
        <label>Criteria 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria3__c</fullName>
        <label>Criteria 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria4__c</fullName>
        <label>Criteria 4</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria5__c</fullName>
        <label>Criteria 5</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria6__c</fullName>
        <label>Criteria 6</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria7__c</fullName>
        <label>Criteria 7</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria8__c</fullName>
        <label>Criteria 8</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria9__c</fullName>
        <label>Criteria 9</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria10__c</fullName>
        <label>Criteria 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Marking Scheme</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Marking Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marking Schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>