AASES-Project/force-app/main/default/objects/MarkingScheme__c/fields/Criteria10__c.field-meta.xml
<CustomField>
    <fullName>Criteria10__c</fullName>
    <label>Criteria 10</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>