AASES-Project/force-app/main/default/objects/MarkingScheme__c/fields/Criteria1__c.field-meta.xml
<CustomField>
    <fullName>Criteria1__c</fullName>
    <label>Criteria 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>