AASES-Project/force-app/main/default/objects/MarkingScheme__c/fields/Criteria2__c.field-meta.xml
<CustomField>
    <fullName>Criteria2__c</fullName>
    <label>Criteria 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>