AASES-Project/force-app/main/default/objects/MarkingScheme__c/fields/ExamType__c.field-meta.xml
<CustomField>
    <fullName>ExamType__c</fullName>
    <label>Exam Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>