AASES-Project/force-app/main/default/objects/MarkingScheme__c/fields/Slot__c.field-meta.xml
<CustomField>
    <fullName>Slot__c</fullName>
    <label>Slot</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>